03_infrastructure/observability/ingress/overlays/dev/ingress-alertmanager-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
spec:
  routes:
    - match: Host(`alertmanager.host.k3d.internal`)
      kind: Rule
      services:
        - name: alertmanager-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-tls
spec:
  routes:
    - match: Host(`alertmanager.host.k3d.internal`)
      kind: Rule
      services:
        - name: alertmanager-gatekeeper
          port: 3000
