03_infrastructure/observability/ingress/overlays/dev/ingress-grafana-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  routes:
    - match: Host(`grafana.host.k3d.internal`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
spec:
  routes:
    - match: Host(`grafana.host.k3d.internal`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
